# HS-TasNet

./: pyproject.toml
hs_tasnet/: trainer.py
tests/: test_hs_tasnet.py
