[project]
name = "HS-TasNet"
version = "0.2.31"
description = "HS TasNet"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'music separation',
    'real time'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "accelerate>=1.10.0",
    "einx>=0.3.0",
    "einops>=0.8.1",
    "ema-pytorch",
    "librosa",
    "loguru",
    "matplotlib",
    "musdb",
    "sounddevice",
    "soundfile",
    "torch>=2.8",
    "torchaudio",
    "torchcodec",
]

[project.urls]
Homepage = "https://pypi.org/project/hs-tasnet/"
Repository = "https://github.com/lucidrains/hs-tasnet"

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hs_tasnet"]
